--- a/src/styles/template/Layout.scss
+++ b/src/styles/template/Layout.scss
@@ -4,6 +4,11 @@ body {
   background-color: $background-color;
 }
 
+.disabled {
+  background-color: #ccc;
+  cursor: not-allowed !important;
+}
+
 .display-flex{
   display: flex;
   flex-direction: column;
