--- a/src/styles/template/Layout.scss
+++ b/src/styles/template/Layout.scss
@@ -37,19 +37,29 @@ body {
   top: 0;
   left: 0;
   overflow-y: auto;
+  display: none;
 }
 
 // Main Section
 .main-section {
-  margin-left: 95px;
   background-color: $background-color;
   height: calc(100vh - 40px);
   padding: 20px;
   display: flex;
   flex-direction: column;
   overflow: scroll;
+  margin-left: 0;
 }
 
+
+@media only screen and (min-width: 576px) {
+  .main-section{
+    margin-left: 95px;
+  }
+  .left-nav {
+    display: inherit;
+  }
+}
 .right-sidebar {
   background-color: $background-color;
   height: 100vh;
